objects/L2I_MCSPricingTable__c.object
<CustomObject>
    <fields>
        <fullName>L2I_Cost__c</fullName>
        <label>Cost</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Index__c</fullName>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Inventory_Item_Id__c</fullName>
        <description>EBS Item Id</description>
        <externalId>true</externalId>
        <label>Inventory Item Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Max_Input__c</fullName>
        <label>Max Input</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Migrate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to determine if record should be migrated to downstream orgs.</description>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Min_Input__c</fullName>
        <label>Min Input</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Price__c</fullName>
        <label>Price</label>
        <precision>15</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Requires_Migrational_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Migrational Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Score__c</fullName>
        <label>Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>NewVideo</fullName>
                </value>
                <value>
                    <fullName>VideoLanguage</fullName>
                </value>
                <value>
                    <fullName>NewAudio</fullName>
                </value>
                <value>
                    <fullName>GUILanguage</fullName>
                </value>
                <value>
                    <fullName>Routes</fullName>
                </value>
                <value>
                    <fullName>VLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MCS Pricing Table</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>L2I_ProductCode__c</columns>
        <columns>L2I_Type__c</columns>
        <columns>L2I_Index__c</columns>
        <columns>L2I_Score__c</columns>
        <columns>L2I_Min_Input__c</columns>
        <columns>L2I_Max_Input__c</columns>
        <columns>L2I_Cost__c</columns>
        <columns>L2I_Price__c</columns>
        <columns>L2I_Migration_External_Id__c</columns>
        <columns>L2I_Inventory_Item_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MCSPricingTable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCS Pricing Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>